// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GitLabCIGeneratorAdapter > generateDocumentation > should generate complete documentation for a GitLab Component > gitlab-component-documentation 1`] = `
"<!-- header:start -->

# Template

<!-- header:end -->
<!-- overview:start -->

## Overview

Docker Build Component
A reusable component for building and pushing Docker images

<!-- overview:end -->
<!-- usage:start -->

\`\`\`yaml
include:
  - component: hoverkraft-tech/ci-dokumentor@templates/docker-build/template.yml
    with:
      # Add component inputs here
\`\`\`

<!-- usage:end -->
<!-- inputs:start -->

## Inputs

| **Input**             | **Description**                        | **Required** | **Type**   | **Default**               |
| --------------------- | -------------------------------------- | ------------ | ---------- | ------------------------- |
| **\`image_name\`**      | Name of the Docker image to build      | **true**     | **string** | -                         |
| **\`platforms\`**       | Target platforms for multi-arch builds | **false**    | **string** | \`linux/amd64,linux/arm64\` |
| **\`dockerfile_path\`** | Path to the Dockerfile                 | **false**    | **string** | \`Dockerfile\`              |
| **\`build_context\`**   | Build context directory                | **false**    | **string** | \`.\`                       |

<!-- inputs:end -->
"
`;

exports[`GitLabCIGeneratorAdapter > generateDocumentation > should generate documentation for a GitLab CI Pipeline > gitlab-pipeline-documentation 1`] = `
"<!-- header:start -->

# .Gitlab Ci

<!-- header:end -->
<!-- overview:start -->

## Overview

GitLab CI Pipeline for Node.js Application
This pipeline builds, tests, and deploys a Node.js application

<!-- overview:end -->
<!-- usage:start -->

\`\`\`yaml
include:
  - project: 'hoverkraft-tech/ci-dokumentor'
    file: '.gitlab-ci.yml'
    ref: '0.1.3'
\`\`\`

<!-- usage:end -->
<!-- inputs:start -->
<!-- inputs:end -->
"
`;
